tests/ui/const-generics/issues/issue-71611.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71611.rs:5:31
   |
LL | fn func<A, const F: fn(inner: A)>(outer: A) {
   |                               ^ the type must not depend on the parameter `A`

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71611.rs:5:21
   |
LL | fn func<A, const F: fn(inner: A)>(outer: A) {
   |                     ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0770`.
